--- a/packages/polar-bookshelf-secrets/package.json
+++ b/packages/polar-bookshelf-secrets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-bookshelf-secrets",
-  "version": "2.1.126",
+  "version": "90.135.0",
   "description": "",
   "main": "index.js",
   "private": true,
@@ -15,6 +15,5 @@
     "url": "https://github.com/burtonator/polar-bookshelf-secrets/issues"
   },
   "homepage": "https://github.com/burtonator/polar-bookshelf-secrets#readme",
-  "scripts": {},
-  "devDependencies": {}
+  "scripts": {}
 }
