--- a/packages/polar-desktop-app/package.json
+++ b/packages/polar-desktop-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-desktop-app",
-  "version": "2.1.126",
+  "version": "90.135.0",
   "description": "Polar",
   "main": "./main-bundle.js",
   "private": true,
@@ -52,19 +52,19 @@
     "fork-ts-checker-webpack-plugin": "=6.2.0",
     "mocha": "=9.1.1",
     "null-loader": "=4.0.1",
-    "polar-eslint": "^2.1.126",
-    "polar-typescript": "^2.1.126",
+    "polar-eslint": "^90.135.0",
+    "polar-karma": "^90.135.0",
+    "polar-typescript": "^90.135.0",
+    "polar-webpack": "^90.135.0",
     "source-map-support": "=0.5.19",
     "thread-loader": "=3.0.1",
     "ts-loader": "=8.0.18",
     "webpack": "=5.26.3",
-    "webpack-cli": "=4.5.0",
-    "polar-karma": "^2.1.126",
-    "polar-webpack": "^2.1.126"
+    "webpack-cli": "=4.5.0"
   },
   "dependencies": {
-    "polar-bookshelf": "^2.1.126",
-    "polar-shared": "^2.1.126"
+    "polar-bookshelf": "^90.135.0",
+    "polar-shared": "^90.135.0"
   },
   "collective": {
     "type": "opencollective",
