--- a/packages/polar-shared/package.json
+++ b/packages/polar-shared/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-shared",
-  "version": "2.1.126",
+  "version": "90.135.0",
   "description": "",
   "scripts": {
     "test": "RESULT=\"$(find . -name '**Test.js' -o -name '**TestN.js' -o -name '**TestNK.js' -not -path 'node_modules/*')\" && if [ -z \"$RESULT\" ]; then echo 'No tests'; else yarn run mocha; fi;",
@@ -33,12 +33,12 @@
     "@types/uuid": "3.4.5",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^2.1.126",
-    "polar-test": "^2.1.126",
-    "polar-typescript": "^2.1.126",
-    "wait-for-expect": "3.0.1",
-    "polar-karma": "^2.1.126",
-    "polar-webpack": "^2.1.126"
+    "polar-eslint": "^90.135.0",
+    "polar-karma": "^90.135.0",
+    "polar-test": "^90.135.0",
+    "polar-typescript": "^90.135.0",
+    "polar-webpack": "^90.135.0",
+    "wait-for-expect": "3.0.1"
   },
   "dependencies": {
     "base-x": "=3.0.8",
