--- a/packages/polar-web-extension-api/package.json
+++ b/packages/polar-web-extension-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-web-extension-api",
-  "version": "2.1.126",
+  "version": "90.135.0",
   "description": "Provides just the basic API that we can use in both the frontend and backend for API requests and responses.",
   "main": "index.js",
   "scripts": {
@@ -27,18 +27,18 @@
     "karma-cli": "^2.0.0",
     "karma-mocha": "=2.0.1",
     "mocha": "=9.1.1",
-    "polar-eslint": "^2.1.126",
-    "polar-typescript": "^2.1.126",
+    "polar-eslint": "^90.135.0",
+    "polar-karma": "^90.135.0",
+    "polar-typescript": "^90.135.0",
+    "polar-webpack": "^90.135.0",
     "ts-loader": "=8.0.18",
     "webpack": "=5.26.3",
-    "webpack-cli": "=4.5.0",
-    "polar-karma": "^2.1.126",
-    "polar-webpack": "^2.1.126"
+    "webpack-cli": "=4.5.0"
   },
   "dependencies": {
     "@types/karma": "^5.0.1",
     "@types/node": "=14.14.35",
-    "polar-shared": "^2.1.126"
+    "polar-shared": "^90.135.0"
   },
   "files": [
     "**/*.js",
