--- a/packages/polar-site2/package.json
+++ b/packages/polar-site2/package.json
@@ -44,8 +44,8 @@
     "ink": "=3.0.8",
     "ink-box": "=1.0.0",
     "pngquant-bin": "=6.0.0",
-    "polar-bookshelf": "^90.135.0",
-    "polar-shared": "^90.135.0",
+    "polar-bookshelf": "90.135.0",
+    "polar-shared": "90.135.0",
     "react": "=16.14.0",
     "react-dom": "=16.14.0",
     "react-helmet": "=6.1.0",
