--- a/packages/polar-answers-api/package.json
+++ b/packages/polar-answers-api/package.json
@@ -20,13 +20,13 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^90.135.0",
-    "polar-karma": "^90.135.0",
-    "polar-typescript": "^90.135.0",
-    "polar-webpack": "^90.135.0"
+    "polar-eslint": "90.135.0",
+    "polar-karma": "90.135.0",
+    "polar-typescript": "90.135.0",
+    "polar-webpack": "90.135.0"
   },
   "dependencies": {
-    "polar-shared": "^90.135.0"
+    "polar-shared": "90.135.0"
   },
   "files": [
     "**/*.js",
