--- a/packages/polar-answers/package.json
+++ b/packages/polar-answers/package.json
@@ -20,21 +20,21 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^90.135.0",
-    "polar-firebase-admin": "^90.135.0",
-    "polar-karma": "^90.135.0",
-    "polar-test": "^90.135.0",
-    "polar-typescript": "^90.135.0",
-    "polar-webpack": "^90.135.0"
+    "polar-eslint": "90.135.0",
+    "polar-firebase-admin": "90.135.0",
+    "polar-karma": "90.135.0",
+    "polar-test": "90.135.0",
+    "polar-typescript": "90.135.0",
+    "polar-webpack": "90.135.0"
   },
   "dependencies": {
     "@google-cloud/language": "=4.2.5",
-    "polar-answers-api": "^90.135.0",
-    "polar-blocks": "^90.135.0",
-    "polar-firebase": "^90.135.0",
-    "polar-google-cloud-language": "^90.135.0",
-    "polar-pdf": "^90.135.0",
-    "polar-shared": "^90.135.0"
+    "polar-answers-api": "90.135.0",
+    "polar-blocks": "90.135.0",
+    "polar-firebase": "90.135.0",
+    "polar-google-cloud-language": "90.135.0",
+    "polar-pdf": "90.135.0",
+    "polar-shared": "90.135.0"
   },
   "files": [
     "**/*.js",
