--- a/packages/polar-backend-shared/package.json
+++ b/packages/polar-backend-shared/package.json
@@ -29,13 +29,13 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^90.135.0",
-    "polar-karma": "^90.135.0",
-    "polar-typescript": "^90.135.0",
-    "polar-webpack": "^90.135.0"
+    "polar-eslint": "90.135.0",
+    "polar-karma": "90.135.0",
+    "polar-typescript": "90.135.0",
+    "polar-webpack": "90.135.0"
   },
   "dependencies": {
-    "polar-shared-webserver": "^90.135.0",
+    "polar-shared-webserver": "90.135.0",
     "tsconfig": "^7.0.0"
   }
 }
