--- a/packages/polar-content-capture/package.json
+++ b/packages/polar-content-capture/package.json
@@ -22,17 +22,17 @@
     "chai": "4.2.0",
     "jsdom": "=16.7.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^90.135.0",
-    "polar-karma": "^90.135.0",
-    "polar-mocha": "^90.135.0",
-    "polar-test": "^90.135.0",
-    "polar-typescript": "^90.135.0",
-    "polar-webpack": "^90.135.0",
+    "polar-eslint": "90.135.0",
+    "polar-karma": "90.135.0",
+    "polar-mocha": "90.135.0",
+    "polar-test": "90.135.0",
+    "polar-typescript": "90.135.0",
+    "polar-webpack": "90.135.0",
     "wait-for-expect": "3.0.1"
   },
   "dependencies": {
     "jszip": "=3.5.0",
-    "polar-shared": "^90.135.0"
+    "polar-shared": "90.135.0"
   },
   "files": [
     "**/*.js",
