--- a/packages/polar-doc-preview-loader/package.json
+++ b/packages/polar-doc-preview-loader/package.json
@@ -23,18 +23,18 @@
     "@types/node": "=14.14.35",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^90.135.0",
-    "polar-karma": "^90.135.0",
-    "polar-test": "^90.135.0",
-    "polar-typescript": "^90.135.0",
-    "polar-webpack": "^90.135.0"
+    "polar-eslint": "90.135.0",
+    "polar-karma": "90.135.0",
+    "polar-test": "90.135.0",
+    "polar-typescript": "90.135.0",
+    "polar-webpack": "90.135.0"
   },
   "dependencies": {
     "@google-cloud/tasks": "=1.9.0",
     "firebase-admin": "=9.11.0",
-    "polar-firebase": "^90.135.0",
-    "polar-firebase-admin": "^90.135.0",
-    "polar-shared": "^90.135.0",
-    "polar-webapp-links": "^90.135.0"
+    "polar-firebase": "90.135.0",
+    "polar-firebase-admin": "90.135.0",
+    "polar-shared": "90.135.0",
+    "polar-webapp-links": "90.135.0"
   }
 }
