--- a/packages/polar-dom-text-search/package.json
+++ b/packages/polar-dom-text-search/package.json
@@ -23,15 +23,15 @@
     "jsdom": "=16.7.0",
     "jsdom-global": "3.0.2",
     "mocha": "=9.1.1",
-    "polar-eslint": "^90.135.0",
-    "polar-karma": "^90.135.0",
-    "polar-typescript": "^90.135.0",
-    "polar-webpack": "^90.135.0"
+    "polar-eslint": "90.135.0",
+    "polar-karma": "90.135.0",
+    "polar-typescript": "90.135.0",
+    "polar-webpack": "90.135.0"
   },
   "dependencies": {
     "@types/node": "=14.14.35",
-    "polar-shared": "^90.135.0",
-    "polar-test": "^90.135.0"
+    "polar-shared": "90.135.0",
+    "polar-test": "90.135.0"
   },
   "files": [
     "**/*.js",
