--- a/packages/polar-epub-generator/package.json
+++ b/packages/polar-epub-generator/package.json
@@ -20,14 +20,14 @@
     "@types/mocha": "=9.0.0",
     "@types/node": "=14.14.35",
     "mocha": "=9.1.1",
-    "polar-eslint": "^90.135.0",
-    "polar-karma": "^90.135.0",
-    "polar-test": "^90.135.0",
-    "polar-typescript": "^90.135.0",
-    "polar-webpack": "^90.135.0"
+    "polar-eslint": "90.135.0",
+    "polar-karma": "90.135.0",
+    "polar-test": "90.135.0",
+    "polar-typescript": "90.135.0",
+    "polar-webpack": "90.135.0"
   },
   "dependencies": {
     "jszip": "=3.5.0",
-    "polar-shared": "^90.135.0"
+    "polar-shared": "90.135.0"
   }
 }
