--- a/packages/polar-epub/package.json
+++ b/packages/polar-epub/package.json
@@ -19,16 +19,16 @@
   "devDependencies": {
     "@types/mocha": "=9.0.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^90.135.0",
-    "polar-karma": "^90.135.0",
-    "polar-test": "^90.135.0",
-    "polar-typescript": "^90.135.0",
-    "polar-webpack": "^90.135.0"
+    "polar-eslint": "90.135.0",
+    "polar-karma": "90.135.0",
+    "polar-test": "90.135.0",
+    "polar-typescript": "90.135.0",
+    "polar-webpack": "90.135.0"
   },
   "dependencies": {
     "epubjs": "=0.3.89-polar.16",
     "fast-xml-parser": "^3.19.0",
     "node-stream-zip": "^1.14.0",
-    "polar-shared": "^90.135.0"
+    "polar-shared": "90.135.0"
   }
 }
