--- a/packages/polar-markdown/package.json
+++ b/packages/polar-markdown/package.json
@@ -19,17 +19,17 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^90.135.0",
-    "polar-karma": "^90.135.0",
-    "polar-typescript": "^90.135.0",
-    "polar-webpack": "^90.135.0"
+    "polar-eslint": "90.135.0",
+    "polar-karma": "90.135.0",
+    "polar-typescript": "90.135.0",
+    "polar-webpack": "90.135.0"
   },
   "dependencies": {
     "@types/node": "=14.14.35",
     "@types/showdown": "^1.9.3",
     "gray-matter": "^4.0.2",
-    "polar-shared": "^90.135.0",
-    "polar-test": "^90.135.0",
+    "polar-shared": "90.135.0",
+    "polar-test": "90.135.0",
     "showdown": "^1.9.1"
   },
   "files": [
