--- a/packages/polar-pdf/package.json
+++ b/packages/polar-pdf/package.json
@@ -21,10 +21,10 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^90.135.0",
-    "polar-karma": "^90.135.0",
-    "polar-typescript": "^90.135.0",
-    "polar-webpack": "^90.135.0"
+    "polar-eslint": "90.135.0",
+    "polar-karma": "90.135.0",
+    "polar-typescript": "90.135.0",
+    "polar-webpack": "90.135.0"
   },
   "dependencies": {
     "@types/node": "=14.14.35",
@@ -32,8 +32,8 @@
     "canvas": "=2.8.0",
     "jsdom": "=16.7.0",
     "pdfjs-dist": "=2.8.250-polar.3",
-    "polar-shared": "^90.135.0",
-    "polar-test": "^90.135.0"
+    "polar-shared": "90.135.0",
+    "polar-test": "90.135.0"
   },
   "files": [
     "**/*.js",
