--- a/packages/polar-release-metadata/package.json
+++ b/packages/polar-release-metadata/package.json
@@ -25,17 +25,17 @@
     "@types/semver": "~6.2.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^90.135.0",
-    "polar-karma": "^90.135.0",
-    "polar-typescript": "^90.135.0",
-    "polar-webpack": "^90.135.0"
+    "polar-eslint": "90.135.0",
+    "polar-karma": "90.135.0",
+    "polar-typescript": "90.135.0",
+    "polar-webpack": "90.135.0"
   },
   "dependencies": {
     "@types/node": "=14.14.35",
     "@types/showdown": "^1.9.3",
-    "polar-markdown": "^90.135.0",
-    "polar-shared": "^90.135.0",
-    "polar-test": "^90.135.0",
+    "polar-markdown": "90.135.0",
+    "polar-shared": "90.135.0",
+    "polar-test": "90.135.0",
     "semver": "~6.3.0"
   },
   "files": [
