--- a/packages/polar-search/package.json
+++ b/packages/polar-search/package.json
@@ -18,16 +18,16 @@
   "devDependencies": {
     "@types/mocha": "=9.0.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^90.135.0",
-    "polar-karma": "^90.135.0",
-    "polar-test": "^90.135.0",
-    "polar-typescript": "^90.135.0",
-    "polar-webpack": "^90.135.0"
+    "polar-eslint": "90.135.0",
+    "polar-karma": "90.135.0",
+    "polar-test": "90.135.0",
+    "polar-typescript": "90.135.0",
+    "polar-webpack": "90.135.0"
   },
   "dependencies": {
     "@types/xmldom": "^0.1.29",
-    "polar-search-api": "^90.135.0",
-    "polar-shared": "^90.135.0",
+    "polar-search-api": "90.135.0",
+    "polar-shared": "90.135.0",
     "xmldom": "^0.1.27"
   }
 }
