--- a/packages/polar-shared-webserver/package.json
+++ b/packages/polar-shared-webserver/package.json
@@ -20,16 +20,16 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^90.135.0",
-    "polar-karma": "^90.135.0",
-    "polar-test": "^90.135.0",
-    "polar-typescript": "^90.135.0",
-    "polar-webpack": "^90.135.0"
+    "polar-eslint": "90.135.0",
+    "polar-karma": "90.135.0",
+    "polar-test": "90.135.0",
+    "polar-typescript": "90.135.0",
+    "polar-webpack": "90.135.0"
   },
   "dependencies": {
     "@types/express": "=4.17.1",
     "express": "=4.17.1",
-    "polar-shared": "^90.135.0"
+    "polar-shared": "90.135.0"
   },
   "files": [
     "**/*.js",
