--- a/packages/polar-shared/package.json
+++ b/packages/polar-shared/package.json
@@ -33,11 +33,11 @@
     "@types/uuid": "3.4.5",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^90.135.0",
-    "polar-karma": "^90.135.0",
-    "polar-test": "^90.135.0",
-    "polar-typescript": "^90.135.0",
-    "polar-webpack": "^90.135.0",
+    "polar-eslint": "90.135.0",
+    "polar-karma": "90.135.0",
+    "polar-test": "90.135.0",
+    "polar-typescript": "90.135.0",
+    "polar-webpack": "90.135.0",
     "wait-for-expect": "3.0.1"
   },
   "dependencies": {
