--- a/packages/polar-spaced-repetition/package.json
+++ b/packages/polar-spaced-repetition/package.json
@@ -21,15 +21,15 @@
     "@types/node": "=14.14.35",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^90.135.0",
-    "polar-karma": "^90.135.0",
-    "polar-test": "^90.135.0",
-    "polar-typescript": "^90.135.0",
-    "polar-webpack": "^90.135.0"
+    "polar-eslint": "90.135.0",
+    "polar-karma": "90.135.0",
+    "polar-test": "90.135.0",
+    "polar-typescript": "90.135.0",
+    "polar-webpack": "90.135.0"
   },
   "dependencies": {
-    "polar-shared": "^90.135.0",
-    "polar-spaced-repetition-api": "^90.135.0"
+    "polar-shared": "90.135.0",
+    "polar-spaced-repetition-api": "90.135.0"
   },
   "files": [
     "**/*.js",
