--- a/packages/polar-thumbnail/package.json
+++ b/packages/polar-thumbnail/package.json
@@ -21,16 +21,16 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^90.135.0",
-    "polar-karma": "^90.135.0",
-    "polar-test": "^90.135.0",
-    "polar-typescript": "^90.135.0",
-    "polar-webpack": "^90.135.0"
+    "polar-eslint": "90.135.0",
+    "polar-karma": "90.135.0",
+    "polar-test": "90.135.0",
+    "polar-typescript": "90.135.0",
+    "polar-webpack": "90.135.0"
   },
   "dependencies": {
     "@types/puppeteer": "=5.4.3",
-    "polar-pdf": "^90.135.0",
-    "polar-shared": "^90.135.0",
+    "polar-pdf": "90.135.0",
+    "polar-shared": "90.135.0",
     "puppeteer": "=9.1.1"
   }
 }
