--- a/packages/polar-web-extension-api/package.json
+++ b/packages/polar-web-extension-api/package.json
@@ -27,10 +27,10 @@
     "karma-cli": "^2.0.0",
     "karma-mocha": "=2.0.1",
     "mocha": "=9.1.1",
-    "polar-eslint": "^90.135.0",
-    "polar-karma": "^90.135.0",
-    "polar-typescript": "^90.135.0",
-    "polar-webpack": "^90.135.0",
+    "polar-eslint": "90.135.0",
+    "polar-karma": "90.135.0",
+    "polar-typescript": "90.135.0",
+    "polar-webpack": "90.135.0",
     "ts-loader": "=8.0.18",
     "webpack": "=5.26.3",
     "webpack-cli": "=4.5.0"
@@ -38,7 +38,7 @@
   "dependencies": {
     "@types/karma": "^5.0.1",
     "@types/node": "=14.14.35",
-    "polar-shared": "^90.135.0"
+    "polar-shared": "90.135.0"
   },
   "files": [
     "**/*.js",
