--- a/packages/polar-web-extension/package.json
+++ b/packages/polar-web-extension/package.json
@@ -22,15 +22,15 @@
     "@material-ui/core": "=4.11.3",
     "@material-ui/icons": "=4.11.2",
     "page-metadata-parser": "=1.1.4",
-    "polar-assets": "^90.135.0",
-    "polar-bookshelf": "^90.135.0",
-    "polar-content-capture": "^90.135.0",
-    "polar-epub-generator": "^90.135.0",
-    "polar-firebase-browser": "^90.135.0",
-    "polar-html": "^90.135.0",
-    "polar-react": "^90.135.0",
-    "polar-shared": "^90.135.0",
-    "polar-web-extension-api": "^90.135.0",
+    "polar-assets": "90.135.0",
+    "polar-bookshelf": "90.135.0",
+    "polar-content-capture": "90.135.0",
+    "polar-epub-generator": "90.135.0",
+    "polar-firebase-browser": "90.135.0",
+    "polar-html": "90.135.0",
+    "polar-react": "90.135.0",
+    "polar-shared": "90.135.0",
+    "polar-web-extension-api": "90.135.0",
     "readability": "0.2.0-polar.2"
   },
   "devDependencies": {
@@ -38,16 +38,16 @@
     "@types/chrome": "0.0.114",
     "@types/mocha": "=9.0.0",
     "@types/node": "=14.14.35",
-    "@types/page-metadata-parser": "^90.135.0",
+    "@types/page-metadata-parser": "90.135.0",
     "@types/react": "=16.9.53",
     "@types/react-dom": "=16.9.8",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^90.135.0",
-    "polar-karma": "^90.135.0",
-    "polar-mocha": "^90.135.0",
-    "polar-typescript": "^90.135.0",
-    "polar-webpack": "^90.135.0",
+    "polar-eslint": "90.135.0",
+    "polar-karma": "90.135.0",
+    "polar-mocha": "90.135.0",
+    "polar-typescript": "90.135.0",
+    "polar-webpack": "90.135.0",
     "webpack": "=5.26.3",
     "webpack-cli": "=4.5.0"
   },
