--- a/packages/polar-desktop-app/package.json
+++ b/packages/polar-desktop-app/package.json
@@ -52,10 +52,10 @@
     "fork-ts-checker-webpack-plugin": "=6.2.0",
     "mocha": "=9.1.1",
     "null-loader": "=4.0.1",
-    "polar-eslint": "^90.135.0",
-    "polar-karma": "^90.135.0",
-    "polar-typescript": "^90.135.0",
-    "polar-webpack": "^90.135.0",
+    "polar-eslint": "90.135.0",
+    "polar-karma": "90.135.0",
+    "polar-typescript": "90.135.0",
+    "polar-webpack": "90.135.0",
     "source-map-support": "=0.5.19",
     "thread-loader": "=3.0.1",
     "ts-loader": "=8.0.18",
