--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -94,8 +94,8 @@
     "mini-css-extract-plugin": "=0.9.0",
     "mocha": "=9.1.1",
     "node-sass": "=4.14.1",
-    "polar-eslint": "^2.1.126",
-    "polar-karma": "^2.1.126",
+    "polar-eslint": "90.135.0",
+    "polar-karma": "90.135.0",
     "polar-typescript": "90.135.0",
     "polar-webpack": "90.135.0",
     "react-contenteditable": "=3.3.5",
