--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -28,7 +28,7 @@
     "serve": "node scripts/serve.js",
     "karma": "echo no karma",
     "karma:dev": "../../node_modules/karma/bin/karma start --browsers Chrome --singleRun false",
-    "mocha": "mocha -p --jobs=1 --timeout 60000 --exit './{,!(node_modules)/**}/*Test.js' './{,!(node_modules)/**}/*TestN.js' './{,!(node_modules)/**}/*TestNK.js'",
+    "mocha": "mocha -p --reporter xunit --reporter-option output=test_results.xml --jobs=1 --timeout 60000 --exit './{,!(node_modules)/**}/*Test.js' './{,!(node_modules)/**}/*TestN.js' './{,!(node_modules)/**}/*TestNK.js'",
     "eslintfix": "eslint -c ./.eslintrc.json . --fix",
     "tsc": "tsc"
   },
