--- a/packages/polar-assets/package.json
+++ b/packages/polar-assets/package.json
@@ -6,10 +6,10 @@
     "dist": "echo noop"
   },
   "devDependencies": {
-    "@types/sharp": "^0.25.0"
+    "@types/sharp": "=0.25.0"
   },
   "dependencies": {
-    "sharp": "^0.25.4"
+    "sharp": "=0.25.4"
   },
   "repository": {
     "type": "git",
