--- a/packages/polar-hooks/package.json
+++ b/packages/polar-hooks/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "@types/escape-html": "0.0.20",
     "@types/uuid": "3.4.5",
-    "escape-html": "^1.0.3",
+    "escape-html": "=1.0.3",
     "polar-backend-shared": "0.0.0",
     "polar-firebase": "0.0.0",
     "polar-webapp-dist": "0.0.0",
