--- a/packages/polar-release-metadata/package.json
+++ b/packages/polar-release-metadata/package.json
@@ -22,7 +22,7 @@
   "devDependencies": {
     "@types/chai": "4.2.11",
     "@types/mocha": "=9.0.0",
-    "@types/semver": "~6.2.0",
+    "@types/semver": "=6.2.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
     "polar-eslint": "0.0.0",
@@ -32,11 +32,11 @@
   },
   "dependencies": {
     "@types/node": "=14.14.35",
-    "@types/showdown": "^1.9.3",
+    "@types/showdown": "=1.9.3",
     "polar-markdown": "0.0.0",
     "polar-shared": "0.0.0",
     "polar-test": "0.0.0",
-    "semver": "~6.3.0"
+    "semver": "=6.3.0"
   },
   "files": [
     "**/*.js",
