--- a/packages/polar-shared/package.json
+++ b/packages/polar-shared/package.json
@@ -22,14 +22,14 @@
   },
   "homepage": "https://github.com/burtonator/polar-shared#readme",
   "devDependencies": {
-    "@types/blueimp-md5": "^2.7.0",
+    "@types/blueimp-md5": "=2.7.0",
     "@types/chai": "4.2.11",
-    "@types/deep-equal": "~1.0.1",
+    "@types/deep-equal": "=1.0.1",
     "@types/mocha": "=9.0.0",
     "@types/node": "=14.14.35",
     "@types/node-fetch": "2.5.7",
-    "@types/stopword": "^0.3.0",
-    "@types/twitter-text": "^2.0.0",
+    "@types/stopword": "=0.3.0",
+    "@types/twitter-text": "=2.0.0",
     "@types/uuid": "3.4.5",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
@@ -45,12 +45,12 @@
     "base58check": "2.0.0",
     "blueimp-md5": "2.16.0",
     "core-js": "3.6.0",
-    "deep-equal": "^1.0.1",
+    "deep-equal": "=1.0.1",
     "js-sha3": "0.8.0",
     "node-fetch": "=2.6.1",
-    "stopword": "^0.3.4",
+    "stopword": "=0.3.4",
     "timekeeper": "2.2.0",
-    "twitter-text": "^3.0.1",
+    "twitter-text": "=3.0.1",
     "uuid": "3.3.3"
   },
   "files": [
