--- a/packages/polar-site2/package.json
+++ b/packages/polar-site2/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "@material-ui/core": "=4.11.3",
     "@material-ui/icons": "=4.11.2",
-    "@material-ui/styles": "^4.11.3",
+    "@material-ui/styles": "=4.11.3",
     "@types/node": "=14.14.35",
     "@types/react": "=16.9.53",
     "@types/react-helmet": "=6.1.0",
