--- a/packages/polar-url/package.json
+++ b/packages/polar-url/package.json
@@ -33,8 +33,8 @@
     "polar-webpack": "0.0.0"
   },
   "dependencies": {
-    "@types/whatwg-url": "^6.4.0",
-    "whatwg-url": "^8.0.0"
+    "@types/whatwg-url": "=6.4.0",
+    "whatwg-url": "=8.0.0"
   },
   "files": [
     "**/*.js",
