--- a/packages/polar-web-extension-api/package.json
+++ b/packages/polar-web-extension-api/package.json
@@ -32,7 +32,7 @@
     "webpack-cli": "=4.5.0"
   },
   "dependencies": {
-    "@types/karma": "^5.0.1",
+    "@types/karma": "=5.0.1",
     "@types/node": "=14.14.35",
     "polar-shared": "0.0.0"
   },
