--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -22,8 +22,8 @@
     "test": "RESULT=\"$(find . -name '**Test.js' -o -name '**TestN.js' -o -name '**TestNK.js' -not -path 'node_modules/*')\" && if [ -z \"$RESULT\" ]; then echo 'No tests'; else yarn run mocha; fi;",
     "__test": "scripts/test.sh",
     "eslint": "eslint -c ./.eslintrc.json .",
-    "webpack": "rm -rf dist/public && rm -rf .webpack-cache-loader && rm -rf .terser-webpack-plugin/ && mkdir -p dist/public && node --max_old_space_size=4096 node_modules/.bin/webpack --config=webpack.config.js && pwd && ls -al dist/public && echo 'Webpack built successfully'",
-    "webpack-serve": "node --max_old_space_size=4096 node_modules/.bin/webpack serve",
+    "webpack": "rm -rf dist/public && rm -rf .webpack-cache-loader && rm -rf .terser-webpack-plugin/ && mkdir -p dist/public && node --max_old_space_size=4096 ../../node_modules/.bin/webpack --config=webpack.config.js && pwd && ls -al dist/public && echo 'Webpack built successfully'",
+    "webpack-serve": "node --max_old_space_size=4096 ../../node_modules/.bin/webpack serve",
     "find-unhandled-promises": "yarn run tslint | grep 'Promises must be handled appropriately' | grep -v 'web/test' ; true",
     "serve": "node scripts/serve.js",
     "karma": "echo no karma",
@@ -104,8 +104,6 @@
     "timekeeper": "2.2.0",
     "userflow.js": "=2.2.0",
     "wait-for-expect": "3.0.1",
-    "webpack": "=5.26.3",
-    "webpack-cli": "=4.5.0",
     "workbox-cli": "=5.1.3"
   },
   "dependencies": {
