--- a/packages/polar-desktop-app/package.json
+++ b/packages/polar-desktop-app/package.json
@@ -49,18 +49,13 @@
     "electron-builder": "=22.10.5",
     "electron-notarize": "1.0.0",
     "electron-updater": "=4.3.8",
-    "fork-ts-checker-webpack-plugin": "=6.2.0",
     "mocha": "=9.1.1",
     "null-loader": "=4.0.1",
     "polar-eslint": "0.0.0",
     "polar-karma": "0.0.0",
     "polar-typescript": "0.0.0",
     "polar-webpack": "0.0.0",
-    "source-map-support": "=0.5.19",
-    "thread-loader": "=3.0.1",
-    "ts-loader": "=8.0.18",
-    "webpack": "=5.26.3",
-    "webpack-cli": "=4.5.0"
+    "source-map-support": "=0.5.19"
   },
   "dependencies": {
     "polar-bookshelf": "0.0.0",
