--- a/packages/polar-webpack/package.json
+++ b/packages/polar-webpack/package.json
@@ -7,31 +7,33 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@webpack-cli/serve": "=1.3.0",
+    "@webpack-cli/serve": "=1.5.2",
     "cache-loader": "4.1.0",
-    "copy-webpack-plugin": "=8.0.0",
-    "css-loader": "=5.1.3",
+    "copy-webpack-plugin": "=9.0.1",
+    "css-loader": "=6.3.0",
     "file-loader": "=6.2.0",
-    "fork-ts-checker-webpack-plugin": "=6.2.0",
-    "mini-svg-data-uri": "=1.2.3",
-    "node-polyfill-webpack-plugin": "=1.0.3",
+    "fork-ts-checker-webpack-plugin": "=6.3.3",
+    "mini-svg-data-uri": "=1.3.3",
+    "node-polyfill-webpack-plugin": "=1.1.4",
     "null-loader": "=4.0.1",
-    "postcss-loader": "=5.2.0",
+    "postcss-loader": "=6.1.1",
     "process": "0.11.0",
     "raw-loader": "=4.0.2",
-    "sass-loader": "=11.0.1",
-    "style-loader": "=2.0.0",
-    "terser-webpack-plugin": "=5.1.1",
-    "thread-loader": "=3.0.1",
-    "ts-loader": "=8.0.18",
+    "sass-loader": "=12.1.0",
+    "style-loader": "=3.3.0",
+    "terser-webpack-plugin": "=5.2.4",
+    "thread-loader": "=3.0.4",
+    "ts-loader": "=9.2.6",
     "url-loader": "=4.1.1",
-    "webpack": "=5.26.3",
-    "webpack-bundle-analyzer": "=4.4.0",
-    "webpack-cli": "=4.5.0",
-    "webpack-dev-server": "=3.11.2",
-    "webpack-merge": "=5.2.0",
-    "workbox-webpack-plugin": "=6.1.2",
-    "worker-loader": "=3.0.5"
+    "webpack": "=5.54.0",
+    "webpack-bundle-analyzer": "=4.4.2",
+    "webpack-cli": "=4.8.0",
+    "webpack-dev-server": "=4.3.0",
+    "webpack-merge": "=5.8.0",
+    "workbox-webpack-plugin": "=6.3.0",
+    "worker-loader": "=3.0.8",
+    "@pmmmwh/react-refresh-webpack-plugin": "=0.5.1",
+    "react-refresh": "=0.10.0"
   },
   "devDependencies": {}
 }
