Fixed command for build...

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -374,7 +374,7 @@ workflows:
           requires:
             - build-polar-app
           working_directory: /root/project/packages/polar-bookshelf
-          start: export WEBPACK_BUNDLE=repository && time node --max-old-space-size=7000 ./node_modules/.bin/webpack serve
+          start: export WEBPACK_BUNDLE=repository && time yarn run webpack-serve
           wait-on: "http://localhost:8050"
           command: npx cypress install && npx cypress run --env WIDTH=1920,HEIGHT=1080 --browser chrome
           attach-workspace: true
@@ -387,7 +387,7 @@ workflows:
           requires:
             - build-polar-app
           working_directory: /root/project/packages/polar-bookshelf
-          start: export WEBPACK_BUNDLE=repository && time node --max-old-space-size=7000 ./node_modules/.bin/webpack serve
+          start: export WEBPACK_BUNDLE=repository && time time yarn run webpack-serve
           wait-on: "http://localhost:8050"
           command: npx cypress install && npx cypress run --env WIDTH=1920,HEIGHT=1080 --browser firefox
           attach-workspace: true
@@ -400,7 +400,7 @@ workflows:
           requires:
             - build-polar-app
           working_directory: /root/project/packages/polar-bookshelf
-          start: export WEBPACK_BUNDLE=repository && time node --max-old-space-size=7000 ./node_modules/.bin/webpack serve
+          start: export WEBPACK_BUNDLE=repository && time time yarn run webpack-serve
           wait-on: "http://localhost:8050"
           command: npx cypress install && npx cypress run --env WIDTH=375,HEIGHT=812 --browser firefox
           attach-workspace: true
@@ -413,7 +413,7 @@ workflows:
           requires:
             - build-polar-app
           working_directory: /root/project/packages/polar-bookshelf
-          start: export WEBPACK_BUNDLE=repository && time node --max-old-space-size=7000 ./node_modules/.bin/webpack serve
+          start: export WEBPACK_BUNDLE=repository && time time yarn run webpack-serve
           wait-on: "http://localhost:8050"
           command: npx cypress install && npx cypress run --env WIDTH=1024,HEIGHT=1366 --browser firefox
           attach-workspace: true
