ci: :bug: fix lacking lerna in karma stage

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -160,6 +160,7 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/
+      - global_modules_setup
       - run:
           name: karma
           command: |
