ci: :pencil2: change view on github to github release

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -331,7 +331,7 @@ jobs:
                       "type": "button",
                       "text": {
                         "type": "plain_text",
-                        "text": "View on Github",
+                        "text": "Github Release",
                         "emoji": true
                       },
                       "style": "primary",
