ci: :ambulance: fix variable typo

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -258,7 +258,7 @@ jobs:
             LOG=$(git log --pretty=format:"• %s\\n" --no-merges $LATEST_VERSION...$CURRENT_VERSION | grep "• feat:\|• fix:\|• docs:\|• style:\|• refactor:\|• perf:\|• test:\|• build:\|• ci:\|• chore:\|• revert:" | sort | uniq | tr '\r\n' ' ' )
             ~/go/bin/ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${LATEST_VERSION}
             TEMP_DATE=$(date +"%a %b %d %Y")
-            echo "export CHANGELOG=\"$TEMP_DATE\"" >> $BASH_ENV
+            echo "export DATE=\"$TEMP_DATE\"" >> $BASH_ENV
             echo "export TAG=\"$LATEST_VERSION\"" >> $BASH_ENV
             echo "export CHANGELOG=\"$LOG\"" >> $BASH_ENV
       - run:
