- we are passing in the confirmations now... - new field in the regression engine

--- a/packages/polar-hooks/firebase.json
+++ b/packages/polar-hooks/firebase.json
@@ -74,6 +74,10 @@
         "destination": "/apps/repository/index.html"
       },
       {
+        "source": "/login-with-custom-token",
+        "destination": "/apps/repository/index.html"
+      },
+      {
         "source": "/sign-in",
         "destination": "/apps/repository/index.html"
       },
